--- a/assets/style.css
+++ b/assets/style.css
@@ -98,7 +98,7 @@ body {
 	justify-content: center;
 }
 .gallery-item {
-	position: absolute;
+	/* position: absolute; */
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
