--- a/assets/style.css
+++ b/assets/style.css
@@ -97,7 +97,10 @@ body {
 .gallery .nav {
 	justify-content: center;
 }
+
+
 .gallery-item {
+	position: relative;
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
